--- a/introducao_portuguese.ipynb
+++ b/introducao_portuguese.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Uma introdução à predição em séries temporais \n",
+    "# Uma introdução simplificada à predição em séries temporais \n",
+    "\n",
+    "\n",
+    "Esse tutorial tem o objetivo de introduzir o processo de predição de ponta a ponta, considerando simplificações dos conceitos estatísticos e de aprendizado de máquina, para que se tenha noção do que pode ser feito no sentido de descritores e séries temporais.\n",
+    "\n",
+    "Por ser simplificado, conceitos importantes, como a própria cross-validação, não são devidamente explorados pelos motivos supracitados, somados com a ideia de a apresentação ter o foco de atingir iniciantes em ferramentas importantes para análises e predição de séries temporais.\n",
     "\n",
     "***\n",
     "\n",
